Update Mathjax to 3.2.2 & Config Mathjax & Better dark mode & Change theme

--- a/_posts/test/2023-01-03-test.md
+++ b/_posts/test/2023-01-03-test.md
@@ -14,8 +14,12 @@ Hello World! <!--more-->
 
 Equation $1 + 1 = 2$.
 
+\begin{equation}
+    \ee^{\ii \pi} + 1 = 0
+\end{equation}
+
 $$
-i \frac{\partial \psi}{\partial t} = \hat{H} \psi
+\ii \pdv{\psi}{t} = \hat{H} \psi
 $$
 
 ### Try the code highlight
