--- a/_posts/test/2023-01-03-test.md
+++ b/_posts/test/2023-01-03-test.md
@@ -16,11 +16,14 @@ Equation $1 + 1 = 2$.
 
 \begin{equation}
     \ee^{\ii \pi} + 1 = 0
+    \label{math:1}
 \end{equation}
 
 $$
 \ii \pdv{\psi}{t} = \hat{H} \psi
 $$
+
+Eq$\eqref{math:1}$
 
 ### Try the code highlight
 
