Post one note & Change font

--- a/_posts/cs/2023-01-06-dark-mode.md
+++ b/_posts/cs/2023-01-06-dark-mode.md
@@ -11,6 +11,8 @@ aside:
 
 本Blog右上角的那个小月亮或者小太阳可以手动自由切换不是吗，稍微谈谈用了什么骚方法改的，以及需要注意什么，参考代码是[How to override css prefers-color-scheme setting](https://stackoverflow.com/questions/56300132/how-to-override-css-prefers-color-scheme-setting)中的第一个回答
 
+<!--more-->
+
 首先需要看看模板是怎么实现的，找了半天发现是纯scss，css的媒体查询，现在需要手动，于是乎改`_properties.scss`：
 {% highlight SCSS linenos %}
 [data-theme="dark"] {
